--- a/.gitignore
+++ b/.gitignore
@@ -292,6 +292,8 @@ node_modules/
 **/*.Server/ModelManifest.xml
 _Pvt_Extensions
 
+EnvironmentalVariables.cs
+./EnvironmentalVariables
 # Paket dependency manager
 .paket/paket.exe
 paket-files/
